# Bucephalus

./: .gitignore  Makefile  README.md  pyproject.toml
configs/: simulation_engine_v0.yaml  tactical_engine_v0.yaml
notebooks/: 01_initial_eda.ipynb
scripts/: 01_download_data.py  02_process_raw_to_parquet.py  03_build_master_entities.py  04_run_eda.py  05_build_duckdb_catalog.py  06_build_feature_store.py  07_train_baseline_models.py  08_evaluate_baselines.py  09_build_tactical_engine_inputs.py  10_run_tactical_scenario.py  11_run_match_simulation.py  12_run_sensitivity_analysis.py  13_build_parameter_registry.py  13_train_xg_model.py  14_evaluate_xg_model.py  15_calibrate_markov_matrix.py  16_validate_simulation_backtest.py  17_run_ablation_study.py  18_run_leakage_audit.py  19_bootstrap_tactical_parameters.py  20_run_performance_benchmark.py  21_build_team_strength.py  22_build_ingestion_manifest.py  23_update_incremental_features.py  24_build_model_registry.py  25_train_sequence_model.py  25_write_pre_phase_8_gap_audit.py  26_evaluate_sequence_model.py  27_train_tabular_models.py  28_evaluate_tabular_models.py  29_train_hazard_model.py  30_evaluate_hazard_model.py  31_run_mc_dropout_inference.py  32_run_vectorized_simulation.py  33_run_explainability_samples.py  34_build_pass_networks.py  35_train_gnn_model.py  36_evaluate_gnn_model.py  37_build_phase8_scorecard.py  38_write_phase8_results_summary.py  (+17 more)
tests/: game_helpers.py  test_ablation_study.py  test_baseline_models.py  test_calibration_curves.py  test_chemistry_engine.py  test_empirical_anchor.py  test_paths.py  (+50 more)
(+140 files in other folders)
