[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bucephalus"
version = "0.1.0"
description = "Data-first football simulation foundation."
requires-python = ">=3.11"
dependencies = [
  "duckdb>=1.0",
  "matplotlib>=3.8",
  "numpy>=1.26",
  "polars>=1.0",
  "pyarrow>=15.0",
  "pydantic>=2.7",
  "rich>=13.7",
  "typer>=0.12",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.5",
  "mypy>=1.10",
  "ipykernel>=6.29",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
